# FARSHAPE

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  default.yaml  encoders.c  encoders.c~  i2c.h.gch  i2c.h~  i2c.py  i2c.py~  i2cbusses.c~  main.cpp  manifest.xml
AUX/: README.txt
actuation/: Arm.cpp  Arm.h  arm2.urdf  mainpage.dox  mikebot.gv  model.xml
actuation/src/: Arm.cpp  actuation.h  test.cpp  test_working.cpp
imgproc/: opencvtest.py
launch/: arm.urdf  init.launch
location/: Encoder.c  Encoder.cpp  Encoder.h  FSObject.cpp  FSObject.h  IRsensor.cpp  IRsensor.h  Location.cpp  Location.h  calibration.txt  encoders.c  encoders.h  includes.h  left_IR_calibration.txt  right_IR_calibration.txt
location/test/: irtest  irtest.cpp
mobility/: Motor.cpp  Motor.h  Motors.cpp  Motors.h  Motors.py
mobility/ServoBlaster/: Motors.py  (+3 more)
power/: Monitor.cpp  Monitor.h
sensing/: CMakeCache.txt  CMakeLists.txt  Makefile  \  a  camera.cpp  camera.h  cmake_install.cmake  main.cpp
sensing/camera/: camera.cpp  camera.h
src/: Arm.cpp  Arm.h  march_6.cpp
system/: ADC_SPI.cpp  ADC_SPI.h  Behaviours.cpp  Behaviours.h  Commander.cpp  Commander.h  FSObject.cpp  FSObject.h  Helm.cpp  Helm.h  Navigator.cpp  Navigator.h  Pilot.cpp  Pilot.h  Structure.cpp  Structure.h  driver.cpp  i2c.c  i2c.cpp  i2c.h  i2c_ref.txt  i2cbusses.cpp  includes.h  main.cpp  makefile
tests/: adc_test.cpp  calibrate_IRs.cpp  config_ir.cpp  driver_test.cpp  encoder_test.c  fuckyou.cpp  helm_test.cpp  ir_test.cpp  irtest.cpp  monitor_test.cpp  motor_test.cpp  nav_test.cpp  read_test.cpp
(+9 files in other folders)
